// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`user slice combined reducer handles receiveUserFailure action 1`] = `
Object {
  "loadingState": 3,
  "user": null,
}
`;

exports[`user slice combined reducer handles receiveUserSuccess action 1`] = `
Object {
  "loadingState": 2,
  "user": Object {
    "firstname": " Sample ",
    "lastname": " User ",
    "roles": Array [
      "user",
    ],
    "username": "Sample User",
  },
}
`;

exports[`user slice combined reducer handles requestUser action 1`] = `
Object {
  "loadingState": 1,
  "user": null,
}
`;

exports[`user slice combined reducer returns the expected default initial state 1`] = `
Object {
  "loadingState": 0,
  "user": null,
}
`;
